--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 
 .container-2 {
@@ -635,8 +636,95 @@ a {
     padding: 10px;
     border-radius: 5px;
 }
+
 @media (max-width: 767px) {
     .contenedor-grande {
         margin-top: 0px;
+    }
+
+    .presentation {
+        display: none;
+    }
+
+    .presentation_phone {
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: start;
+        width: 100%;
+        background-color: #161b22;
+        position: relative;
+        border-radius: 20px;
+        flex-grow: 1;
+        /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+        font-family: monospace;
+        padding-right: 70px;
+        /*  padding-left: 35px; */
+        /*   min-width: 330px;
+        margin: 5px; */
+        min-width: 330px;
+        margin-top: 5px;
+        /* position: absolute; */
+        top: 0;
+        left: 0;
+    }
+
+    .avatar-box_phone img {
+        object-position: top;
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        border-radius: 10%;
+        /*         border: 3px solid white; */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+
+    .card_name {
+
+        width: 100%;
+        margin-right: 50px;
+        min-width: 175px;
+    }
+
+    .name {
+        color: #2e90f1e4;
+        text-align: start;
+        font-size: 1.1rem;
+    }
+
+    .role {
+        display: flex;
+        justify-content: center;
+        background-color: #2e313d;
+        padding: 3px;
+        border-radius: 5px;
+        margin-top: 3px;
+    }
+
+    .navbar {
+        position: absolute;
+        background-color: rgba(30, 30, 30, 0.8);
+        border-radius: 0px 0px 20px 20px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        width: 90%;
+        display: flex;
+        justify-content: center;
+    }
+    .content-section {
+        display: none;
+        width: 100%;
+        overflow-y: auto;
+        height: calc(80vh - 80px);
+        scrollbar-width: none;
+    }
+}
+
+@media (min-width: 767px) {
+
+    .card_name,
+    .expand-btn,
+    .presentation_phone {
+        display: none;
     }
 }
